[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/MainScene/MainScene.gd" type="Script" id=2]

[node name="MainScene" type="Node2D"]
script = ExtResource( 2 )

[node name="LevelLayer" type="CanvasLayer" parent="."]

[node name="Player" parent="LevelLayer" instance=ExtResource( 1 )]
unique_name_in_owner = true
position = Vector2( 118, 97 )

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="ButtonPrev" type="Button" parent="UILayer"]
margin_left = 8.0
margin_top = 40.0
margin_right = 40.0
margin_bottom = 64.0
text = "<<"

[node name="ButtonReload" type="Button" parent="UILayer"]
margin_left = 48.0
margin_top = 40.0
margin_right = 72.0
margin_bottom = 64.0
text = "R"

[node name="ButtonNext" type="Button" parent="UILayer"]
margin_left = 80.0
margin_top = 40.0
margin_right = 112.0
margin_bottom = 64.0
text = ">>"

[node name="ButtonInfo" type="Button" parent="UILayer"]
margin_left = 48.0
margin_top = 8.0
margin_right = 72.0
margin_bottom = 32.0
text = "i"

[node name="Panel" type="Panel" parent="UILayer"]
visible = false
margin_left = 64.0
margin_top = 64.0
margin_right = 448.0
margin_bottom = 512.0

[node name="Label" type="Label" parent="UILayer/Panel"]
margin_left = 16.0
margin_top = 16.0
margin_right = 368.0
margin_bottom = 432.0
text = "Sokoban

Author: shinkarom. (https://shinkarom.itch.io)

Year: 2023

Game Engine : Godot. (https://godotengine.org)

Images: kenney. (https://www.kenney.nl/assets/sokoban)

Levels: First 5 levels from \"Mini Cosmos\" by Aymeric du Peloux. (https://sokoban.info/?4)"
autowrap = true

[connection signal="button_up" from="UILayer/ButtonPrev" to="." method="_on_ButtonPrev_button_up"]
[connection signal="button_up" from="UILayer/ButtonReload" to="." method="_on_ButtonReload_button_up"]
[connection signal="button_up" from="UILayer/ButtonNext" to="." method="_on_ButtonNext_button_up"]
[connection signal="mouse_entered" from="UILayer/ButtonInfo" to="." method="_on_ButtonInfo_mouse_entered"]
[connection signal="mouse_exited" from="UILayer/ButtonInfo" to="." method="_on_ButtonInfo_mouse_exited"]
